Fix X-scroll on mobile home page

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,6 +8,11 @@ iframe {
   border: none;
 }
 
+.invisible {
+  width: 0;
+  height: 0;
+}
+
 // Example Code
 
 // Grid Overlay
